--- a/user.css
+++ b/user.css
@@ -134,6 +134,10 @@ margin: 10px 0;
     display: block;
     color: #2c3a47;
     font-size: 30px;
+
+}
+.item button{
+    size: 30px;
 }
 
 .border{
@@ -154,6 +158,7 @@ margin: 10px 0;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.5);
   }
+ 
   
   .modal-content {
     margin: 10% auto;
@@ -190,15 +195,15 @@ margin: 10px 0;
     border-bottom-right-radius: 5px;
   }
   
-  .close {
+  .modal-close {
     color: #ccc;
     float: right;
     font-size: 30px;
     color: #fff;
   }
   
-  .close:hover,
-  .close:focus {
+  .modal-close:hover,
+  .modal-close:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
